# mindsim

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  EXPERIMENTS.md  GREMLIN.md  MUJOCO_KEYS.md  Makefile  NEW_BOT_CHECKLIST.md  OBSERVATIONS.md  README.md  TYPESCRIPT_STYLE.md  ai_commentary.py  algorithms.py  biome.json  checkpoint.py  collection.py  config.py  dashboard.py  grasping_env.py  index.html  main.py  package.json  parallel.py  pipeline.py  plan.md  play.py  pnpm-lock.yaml  policies.py  pyproject.toml  quick_sim.py  remote_train.py  remote_train.sh  replay.py  rerun_logger.py  rerun_wandb.py  reward_hierarchy.py  run_manager.py  scene_preview.py  (+21 more)
.claude/: settings.json
.githooks/: pre-commit
botcad/: CLAUDE.md  __init__.py  bracket.py  cad_utils.py  clearance.py  colors.py  component.py  component_validation.py  connectors.py  debug_drawing.py  debug_render_bot.py  debug_render_servo.py  fasteners.py  formatting.py  geometry.py  ids.py  materials.py  packing.py  render_svg.py  routing.py  skeleton.py  units.py  validation.py  wirenet.py
botcad/assembly/: build.py  refs.py  sequence.py  tools.py
botcad/components/: __init__.py  battery.py  bearing.py  bec.py  camera.py  compute.py  controller.py  esc.py  flight_controller.py  motor.py  propeller.py  servo.py  test_fastener.py  wheel.py
botcad/dfm/: check.py  runner.py  utils.py
botcad/emit/: __init__.py  assembly_renders.py  bom.py  cad.py  component_renders.py  composite.py  drawings.py  emit_wires.py  mujoco.py  readme.py  render3d.py  renders.py  servo_renders.py  viewer.py
botcad/fea/: __init__.py  component.py  export.py  joint_analytical.py  voxelizer.py
botcad/ir/: __init__.py  backend_occt.py  cache.py  debug_rerun.py  emit_body.py  ops.py  program.py  tags.py
botcad/shapescript/: __init__.py  backend_occt.py  (+10 more)
comfyui/: concept_prompt.py  remote_comfyui.py  run.py  workflow_concept_to_3d.json  workflow_concept_to_3d_ui.json  workflow_flux_render.json  workflow_image_to_3d.json
docs/: NEW_COMPONENT_WORKFLOW.md
fusion360_mujoco_exporter/: ARCHITECTURE.md  Fusion360MuJoCoExporter.manifest  Fusion360MuJoCoExporter.py
mindsim/: log.py  server.py
scene_gen/: __init__.py  archetypes.py  bench_gen.py  composer.py  cone_mesh.py  groupings.py  primitives.py  render_catalog.py  render_scenes.py  room.py
scripts/: check_wheeler.py  compare_cad.py  debug_server_fea.py  regen_test_renders.py  test_bracket_fea.py  wt-new
sim/: env.py
tests/: bench_fea.py  conftest.py  step0_warp_fem_test.py  test_assembly_build.py  test_assembly_refs.py  test_assembly_sequence.py  test_assembly_tools.py  test_botcad_pipeline.py  test_bracket_equivalence.py  test_bracket_orientations.py  test_cad_emit.py  test_cad_steps.py  test_clearance.py  test_component_clearance.py  test_component_manifest.py  test_component_validation.py  test_connector_catalog.py  test_dfm_api.py  test_dfm_check.py  test_dfm_connector_access.py  test_dfm_fastener_clearance.py  test_dfm_retention.py  test_dfm_runner.py  test_dfm_wheeler_base.py  test_dfm_wire_bend.py  test_dfm_wire_channel.py  test_dfm_wire_stub_collision.py  test_domain_model.py  test_emit_wires.py  test_fastener_catalog.py  test_fastener_orientation.py  test_fea.py  test_formatting.py  test_ids.py  test_ir_backend.py  test_ir_cache.py  test_ir_debug.py  test_ir_ops.py  test_ir_roundtrip.py  test_manifest_schema.py  (+23 more)
tools/: ai_commentary.py  lint_project.py  play.py  quick_sim.py  remote_train.py  stability_test.py  view.py
training/: algorithms.py  checkpoint.py  collection.py  env.py  git_utils.py  parallel.py  pipeline.py  policies.py  rewards.py  run_manager.py  train.py  tweaks.py
viewer/: assembly-dag.ts  assembly-mode.js  assembly-mode.ts  assembly-scrubber.ts  assembly-viewer.ts  bot-scene.ts  bot-viewer.js  bot-viewer.ts  build-scene-tree.ts  cad-steps-mode.js  cad-steps-mode.ts  component-browser.js  component-browser.ts  component-tree.js  component-tree.ts  design-scene.ts  design-viewer.ts  dev-info.ts  dfm-mode.ts  dfm-panel.ts  dfm-viewer.ts  environment.ts  explore-mode.js  explore-mode.ts  focus-controller.js  focus-controller.ts  icons.ts  ik-mode.js  ik-mode.ts  index.html  joint-mode.js  joint-mode.ts  log.ts  manifest-types.ts  manifest-viewer.ts  measure-tool.js  measure-tool.ts  overlay-viz.ts  presentation.js  presentation.ts  (+20 more)
viz/: blueprint.py  replay.py  rerun_logger.py  rerun_wandb.py  visualize.py
worlds/: room.xml  tabletop.xml
(+400 files in other folders)
