[project]
name = "mindsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brax>=0.14.0",
    "mediapy>=1.2.5",
    "mujoco>=3.4.0",
    "mujoco-mjx>=3.4.0",
    "numpy>=2.4.2",
    "ruff>=0.14.10",
    "warp-lang>=1.10.1",
    "tqdm>=4.67.2",
    "rerun-sdk[datafusion,notebook]>=0.29.0",
    "wandb>=0.24.1",
    "torch>=2.0.0",
    "anthropic>=0.79.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add project root to sys.path so tests can import modules
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (formatter handles what it can)
]