[project]
name = "mindsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brax>=0.14.0",
    "build123d>=0.10.0",
    "mediapy>=1.2.5",
    "mujoco>=3.4.0",
    "mujoco-mjx>=3.4.0",
    "numpy>=2.4.2",
    "ruff>=0.14.10",
    "warp-lang>=1.10.1",
    "tqdm>=4.67.2",
    "rerun-sdk[datafusion,notebook]>=0.29.0",
    "wandb>=0.24.1",
    "torch>=2.0.0",
    "anthropic>=0.79.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-textual-snapshot>=1.0.0",
    "av>=16.1.0",
    "textual>=1.0.0",
    "modal>=1.3.3",
    "fpdf2>=2.8.7",
    "python-fcl>=0.7.0.10",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
    "watchfiles>=1.1.1",
    "structlog>=25.1.0",
]

[tool.uv]
# mjpython needs a framework Python build on macOS. uv's managed Python uses
# a non-framework build whose libpython can't be dlopened. Prefer Homebrew's
# framework Python to avoid this.
python-preference = "system"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add project root to sys.path so tests can import modules
pythonpath = ["."]
timeout = 120  # 2 min per test — CAD tests are heavy but shouldn't exceed this

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "PERF",   # perflint
    "T10",    # flake8-debugger
    "TID",    # flake8-tidy-imports
]
ignore = [
    "E501",    # line too long — formatter handles it
    "RUF001",  # ambiguous unicode in strings (degree symbols etc)
    "RUF002",  # ambiguous unicode in docstrings
    "RUF003",  # ambiguous unicode in comments
    "SIM108",  # if-else vs ternary — readability preference
    "RUF009",  # NewType calls in dataclass defaults are zero-cost, not mutable
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"build123d".msg = "Do not import build123d directly. Use ShapeScript IR (botcad/shapescript/). Only backend_occt.py should call build123d."
"OCP".msg = "Do not import OCP directly. Use ShapeScript IR (botcad/shapescript/). Only backend_occt.py should call OCP/OCCT."

[tool.ruff.lint.per-file-ignores]
# build123d/OCP authorized consumers (TID251)
"botcad/shapescript/backend_occt.py" = ["TID251"]
"botcad/shapescript/debug_rerun.py" = ["TID251"]
"botcad/emit/cad.py" = ["TID251"]
"botcad/emit/component_renders.py" = ["TID251"]
"botcad/emit/drawings.py" = ["TID251"]
"botcad/fasteners.py" = ["TID251"]
"botcad/connectors.py" = ["TID251"]
"botcad/components/*.py" = ["TID251"]
"botcad/cad_utils.py" = ["TID251"]
"botcad/clearance.py" = ["TID251"]
"botcad/render_svg.py" = ["TID251"]
"botcad/debug_drawing.py" = ["TID251"]
"botcad/validation.py" = ["TID251"]
"botcad/assembly/tools.py" = ["TID251"]
"mindsim/server.py" = ["TID251"]
"tests/**" = ["TID251"]
"scripts/**" = ["TID251"]
